# social-app-api

./: .env  .gitignore  db.sqlite3  pyproject.toml
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
socialApp/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_userfollowing_unique_together.py
