[tool.poetry]
name = "socialapp"
version = "0.1.0"
description = ""
authors = ["Armin Patel <72291325+arminpatel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.12"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
djangorestframework-simplejwt = "^5.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
